# u-routing

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  npm-publish.yml  nuget-release.yml  release.yml
bindings/csharp/URouting/: .gitignore  RoutingClient.cs  URouting.csproj
bindings/csharp/URouting/Interop/: NativeInterop.cs
src/: ffi.rs  lib.rs  wasm.rs
src/alns/: destroy.rs  mod.rs  problem.rs  repair.rs  solution_repr.rs
src/constructive/: clarke_wright.rs  mod.rs  nearest_neighbor.rs  nn_tw.rs  solomon_i1.rs  sweep.rs
src/distance/: matrix.rs  mod.rs
src/evaluation/: evaluator.rs  mod.rs
src/ga/: chromosome.rs  mod.rs  problem.rs  split.rs  split_tw.rs
src/local_search/: exchange.rs  mod.rs  or_opt.rs  relocate.rs  three_opt.rs  two_opt.rs
src/models/: customer.rs  mod.rs  problem.rs  route.rs  solution.rs  vehicle.rs
