[package]
name = "u-routing"
version = "0.1.0"
edition = "2021"
authors = ["iyulab"]
license = "MIT"
repository = "https://github.com/iyulab/u-routing"
description = "Vehicle routing optimization: TSP, CVRP, VRPTW with constructive heuristics, local search, GA, and ALNS."
readme = "README.md"
keywords = ["routing", "vrp", "tsp", "optimization", "logistics"]
categories = ["algorithms"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
wasm = ["dep:wasm-bindgen", "dep:serde-wasm-bindgen"]

[dependencies]
u-metaheur = { version = "0.1", path = "../../algorithms/u-metaheur" }
u-numflow = { version = "0.2", path = "../../foundation/u-numflow" }
rand = "0.9"
serde = { version = "1", features = ["derive"] }
wasm-bindgen = { version = "0.2", optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }

[dev-dependencies]
proptest = "1.4"
