[package]
name = "u-routing"
version = "0.2.2"
edition = "2021"
authors = ["iyulab"]
license = "MIT"
repository = "https://github.com/iyulab/u-routing"
description = "Vehicle routing optimization: TSP, CVRP, VRPTW with constructive heuristics, local search, GA, and ALNS."
readme = "README.md"
keywords = ["routing", "vrp", "tsp", "optimization", "logistics"]
categories = ["algorithms"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
wasm = ["dep:wasm-bindgen", "dep:serde-wasm-bindgen", "dep:js-sys"]
ffi = ["dep:serde_json", "dep:libc"]

[dependencies]
u-metaheur = { version = "0.2", path = "../../algorithms/u-metaheur" }
u-numflow = { version = "0.2", path = "../../foundation/u-numflow" }
rand = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1.0", optional = true }
libc = { version = "0.2", optional = true }
wasm-bindgen = { version = "0.2", optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }
js-sys = { version = "0.3", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[dev-dependencies]
proptest = "1.4"
